--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Preloader
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="#section_5" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Schedule</a></li>
-            <li><a href="#section_6" type="button"  data-toggle="collapse" data-target=".navbar-collapse">News</a></li>
+            <!-- <li><a href="#section_6" type="button"  data-toggle="collapse" data-target=".navbar-collapse">News</a></li> -->
             <li><a href="#section_7" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Member</a></li>
             <li><a href="#section_12" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Biography</a></li>
 						<li><a href="#section_20" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Movie</a></li>
@@ -129,7 +129,7 @@ Preloader
 
 
 <!-- NEWS add 2021/01/20 -->
-		<section id="section_6" class="about_section" style="padding-top:80px; ">
+		<!-- <section id="section_6" class="about_section" style="padding-top:80px; ">
       <div class="container">
         <div class="row">
           <div class="col-xs-12">
@@ -138,9 +138,7 @@ Preloader
               <h4> +Sugar. </h4>
             </div>
           </div>
-          <!--section_head_widget-->
         </div>
-        <!--row-->
         <div class="row">
           <div class="col-xs-12">
             <div class="text_widget">
@@ -153,8 +151,7 @@ Preloader
           </div>
         </div>
       </div>
-      <!--container-->
-    </section>
+    </section> -->
 <!-- NEWS -->
 
     <section id="section_7" class="media_section section_first">
