--- a/index.html
+++ b/index.html
@@ -221,13 +221,13 @@ Preloader
 								Amai Yuna</figcaption>
 						</figure>
 					</div>
-					<div class="col-xs-12 col-sm-4 col-md-4 animatedParent">
+					<!-- <div class="col-xs-12 col-sm-4 col-md-4 animatedParent">
 						<figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop10"> <img src="assets/img/umi20201220.jpg" alt="" /> </a>
 							<figcaption>
 								<h6>月美うみ</h6>
 								Tsukimi Umi</figcaption>
 						</figure>
-					</div>
+					</div> -->
         </div>
       </div>
     </section>
@@ -618,7 +618,7 @@ Preloader
       </div>
     </div> -->
 
-		<div class="modal fade" id="gal_pop9" tabindex="-1" role="dialog" aria-hidden="true">
+		<!-- <div class="modal fade" id="gal_pop9" tabindex="-1" role="dialog" aria-hidden="true">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<button type="button" class="close destroy_owl" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
@@ -649,16 +649,13 @@ Preloader
 								</ul>
 								<ul class="channels_list row">
 									<li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Yuna"><i class="fa fa-twitter"></i>TWITTER</a></li>
-								 	<!-- <li class="col-xs-12 col-sm-3"> <a href="https://instagram.com/goma_matsuyama?igshid=wsd6m180i2wc"><i class="fa fa-instagram"></i>INSTAGRAM</a></li>
-								 	<li class="col-xs-12 col-sm-3"> <a href="https://note.com/matsugoma"><i class="fa fa-note"></i>NOTE</a></li> -->
 								</ul>
 							</div>
 						</div>
-						<!--gallery-popup-->
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 		<div class="modal fade" id="gal_pop10" tabindex="-1" role="dialog" aria-hidden="true">
 			<div class="modal-dialog">
