--- a/index.html
+++ b/index.html
@@ -214,20 +214,20 @@ Preloader
                 Fujimiya Momoka</figcaption>
             </figure>
           </div> -->
-					<div class="col-xs-12 col-sm-4 col-md-4 animatedParent">
+					<!-- <div class="col-xs-12 col-sm-4 col-md-4 animatedParent">
 						<figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop9"> <img src="assets/img/yuna20201220.jpg" alt="" /> </a>
 							<figcaption>
 								<h6>天衣ゆな</h6>
 								Amai Yuna</figcaption>
 						</figure>
-					</div>
-					<!-- <div class="col-xs-12 col-sm-4 col-md-4 animatedParent">
+					</div> -->
+					<div class="col-xs-12 col-sm-4 col-md-4 animatedParent">
 						<figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop10"> <img src="assets/img/umi20201220.jpg" alt="" /> </a>
 							<figcaption>
 								<h6>月美うみ</h6>
 								Tsukimi Umi</figcaption>
 						</figure>
-					</div> -->
+					</div>
         </div>
       </div>
     </section>
@@ -278,6 +278,8 @@ Preloader
 								5曲目オリジナル曲「運命じゃないひと」披露</p>
 							<p><span>2021年1月</span><br />
 								メグ・ピッチ・オリオン、日向さや、松山ごま、天衣ゆな、月美うみの5人で新体制で始動</p>
+							<p><span>2021年3月</span><br />
+								天衣ゆな脱退</p>
 
             </div>
           </div>
