--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ Preloader
         </div>
         <div class="row media_widget">
           <div class="col-xs-12 col-sm-6 col-md-6 animatedParent">
-            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop1"><img src="assets/img/megu20201220.jpg" alt="" /> </a>
+            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop1"><img src="assets/img_vol2/megu.HEIC" alt="" /> </a>
               <figcaption>
                 <h6>メグ・ピッチ・オリオン</h6>
                 Megu・Pitch・Orion</figcaption>
@@ -180,7 +180,7 @@ Preloader
             </figure>
           </div> -->
           <div class="col-xs-12 col-sm-6 col-md-6 animatedParent">
-            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop4"><img src="assets/img/sayaka20201220.jpg" alt="" /> </a>
+            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop4"><img src="assets/img_vol2/sayaka.HEIC" alt="" /> </a>
               <figcaption>
                 <h6>日向さや</h6>
                 Hinata Saya</figcaption>
@@ -201,7 +201,7 @@ Preloader
             </figure>
           </div> -->
 					<div class="col-xs-12 col-sm-6 col-md-6 animatedParent">
-            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop7"> <img src="assets/img/goma20201220.jpg" alt="" /> </a>
+            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop7"> <img src="assets/img_vol2/goma.HEIC" alt="" /> </a>
               <figcaption>
                 <h6>松山ごま</h6>
                 Matsuyama Goma</figcaption>
@@ -222,7 +222,7 @@ Preloader
 						</figure>
 					</div> -->
 					<div class="col-xs-12 col-sm-6 col-md-6 animatedParent">
-						<figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop10"> <img src="assets/img/umi20201220.jpg" alt="" /> </a>
+						<figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop10"> <img src="assets/img_vol2/umi.HEIC" alt="" /> </a>
 							<figcaption>
 								<h6>月美うみ</h6>
 								Tsukimi Umi</figcaption>
@@ -344,7 +344,7 @@ Preloader
               <h6>Megupi</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="assets/img/megu20201220.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img_vol2/megu.HEIC" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
@@ -428,7 +428,7 @@ Preloader
               <h6>Hinata Sayaka</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="assets/img/sayaka20201220.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img_vol2/sayaka.HEIC" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
@@ -548,7 +548,7 @@ Preloader
 							<h6>Matsuyama Goma</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="assets/img/goma20201220.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img_vol2/goma.HEIC" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
@@ -669,7 +669,7 @@ Preloader
 						 <h6>Tsukimi Umi</h6>
 							<div class="galery_widget">
 								<ul class="gal_list owl-gallery">
-									<li class="gallery-item"><a href="#"><img src="assets/img/umi20201220.jpg" alt=""></a></li>
+									<li class="gallery-item"><a href="#"><img src="assets/img_vol2/umi.HEIC" alt=""></a></li>
 								</ul>
 								<ul class="social_share">
 									<li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
