--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ Preloader
 						</figure>
 					</div> -->
 					<div class="col-xs-12 col-sm-6 col-md-6 animatedParent">
-						<figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop10"> <img src="assets/img/umi.jpg" alt="" /> </a>
+						<figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop10"> <img src="assets/img/umi20201220.jpg" alt="" /> </a>
 							<figcaption>
 								<h6>月美うみ</h6>
 								Tsukimi Umi</figcaption>
@@ -669,7 +669,7 @@ Preloader
 						 <h6>Tsukimi Umi</h6>
 							<div class="galery_widget">
 								<ul class="gal_list owl-gallery">
-									<li class="gallery-item"><a href="#"><img src="assets/img/umi.jpg" alt=""></a></li>
+									<li class="gallery-item"><a href="#"><img src="assets/img/umi20201220.jpg" alt=""></a></li>
 								</ul>
 								<ul class="social_share">
 									<li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
