--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Preloader
 <div class="wide_layout box-wide">
   <section id="section_1" class="banner hero_section pc_topimg">
     <!--- <h1>画像の大きさあわねえ</h1> --->
-    <img src="assets/img_vol2/top.JPG" alt="+Sugar" class="top_img02"/></section>
+    <img src="assets/img20210627/all.jpg" alt="+Sugar" class="top_img02"/></section>
   <header>
     <nav id="sticktop" class="navbar navbar-default" data-sticky="true">
       <div class="container">
@@ -166,7 +166,7 @@ Preloader
         </div>
         <div class="row media_widget">
           <div class="col-xs-12 col-sm-6 col-md-6 animatedParent">
-            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop1"><img src="assets/img/megu20201220.jpg" alt="" /> </a>
+            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop1"><img src="assets/img20210627/megu.jpg" alt="" /> </a>
               <figcaption>
                 <h6>メグ・ピッチ・オリオン</h6>
                 Megu・Pitch・Orion</figcaption>
@@ -180,7 +180,7 @@ Preloader
             </figure>
           </div> -->
           <div class="col-xs-12 col-sm-6 col-md-6 animatedParent">
-            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop4"><img src="assets/img/sayaka20201220.jpg" alt="" /> </a>
+            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop4"><img src="assets/img20210627/sayaka.jpg" alt="" /> </a>
               <figcaption>
                 <h6>日向さや</h6>
                 Hinata Saya</figcaption>
@@ -201,7 +201,7 @@ Preloader
             </figure>
           </div> -->
 					<div class="col-xs-12 col-sm-6 col-md-6 animatedParent">
-            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop7"> <img src="assets/img/goma20201220.jpg" alt="" /> </a>
+            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop7"> <img src="assets/img20210627/goma.jpg" alt="" /> </a>
               <figcaption>
                 <h6>松山ごま</h6>
                 Matsuyama Goma</figcaption>
@@ -222,10 +222,17 @@ Preloader
 						</figure>
 					</div> -->
 					<div class="col-xs-12 col-sm-6 col-md-6 animatedParent">
-						<figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop10"> <img src="assets/img/umi20201220.jpg" alt="" /> </a>
+						<figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop10"> <img src="assets/img20210627/umi.jpg" alt="" /> </a>
 							<figcaption>
 								<h6>月美うみ</h6>
 								Tsukimi Umi</figcaption>
+						</figure>
+					</div>
+					<div class="col-xs-12 col-sm-6 col-md-6 animatedParent">
+						<figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop10"> <img src="assets/img20210627/umi.jpg" alt="" /> </a>
+							<figcaption>
+								<h6>雨宮れいな</h6>
+								Amamiya Reina</figcaption>
 						</figure>
 					</div>
         </div>
@@ -344,7 +351,7 @@ Preloader
               <h6>Megupi</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="assets/img/megu20201220.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img20210627/megu.jpg" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
@@ -428,7 +435,7 @@ Preloader
               <h6>Hinata Sayaka</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="assets/img/sayaka20201220.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img20210627/sayaka.jpg" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
@@ -548,7 +555,7 @@ Preloader
 							<h6>Matsuyama Goma</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="assets/img/goma20201220.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img20210627/goma.jpg" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
@@ -669,7 +676,7 @@ Preloader
 						 <h6>Tsukimi Umi</h6>
 							<div class="galery_widget">
 								<ul class="gal_list owl-gallery">
-									<li class="gallery-item"><a href="#"><img src="assets/img/umi20201220.jpg" alt=""></a></li>
+									<li class="gallery-item"><a href="#"><img src="assets/img20210627/umi.jpg" alt=""></a></li>
 								</ul>
 								<ul class="social_share">
 									<li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
@@ -687,6 +694,48 @@ Preloader
 									<li>趣味：映画鑑賞、料理、ゲーム、アスレチック遊び</li>
 									<li>特技：エイム合わせ</li>
 									<li>キャッチフレーズ：:地上に舞い降りたjellyfish、青色担当うみみ</li>
+								</ul>
+								<ul class="channels_list row">
+									<li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Umi"><i class="fa fa-twitter"></i>TWITTER</a></li>
+								 	<!-- <li class="col-xs-12 col-sm-3"> <a href="https://instagram.com/goma_matsuyama?igshid=wsd6m180i2wc"><i class="fa fa-instagram"></i>INSTAGRAM</a></li>
+								 	<li class="col-xs-12 col-sm-3"> <a href="https://note.com/matsugoma"><i class="fa fa-note"></i>NOTE</a></li> -->
+								</ul>
+							</div>
+						</div>
+						<!--gallery-popup-->
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="modal fade" id="gal_pop10" tabindex="-1" role="dialog" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<button type="button" class="close destroy_owl" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+					<div class="modal-body">
+						<div class="gallery_popup container">
+							<h2>雨宮れいな</h2>
+						 <h6>Amamiya Reina</h6>
+							<div class="galery_widget">
+								<ul class="gal_list owl-gallery">
+									<li class="gallery-item"><a href="#"><img src="assets/img20210627/umi.jpg" alt=""></a></li>
+								</ul>
+								<ul class="social_share">
+									<li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
+								</ul>
+								<ul class="profile">
+									<li>
+										<h6>Profile</h6>
+									</li>
+									<li>名前: 雨宮れいな</li>
+									<li>ニックネーム：れいにー</li>
+									<li>担当カラー：エンジェルホワイト</li>
+									<li>生年月日：1月5日(いちごの日♡)</li>
+									<li>血液型：O型</li>
+									<li>出身地：神奈川県</li>
+									<li>趣味：コスプレ、歌うこと</li>
+									<li>特技：衣装製作、ウィンク</li>
+									<li>キャッチフレーズ：貴方だけの歌姫でありたい。泣き虫えんじぇる。白色担当 れいにーこと、雨宮れいなですっ</li>
 								</ul>
 								<ul class="channels_list row">
 									<li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Umi"><i class="fa fa-twitter"></i>TWITTER</a></li>
