--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ Preloader
 						</figure>
 					</div>
 					<div class="col-xs-12 col-sm-4 col-md-4 animatedParent">
-						<figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop10"> <img src="assets/img20210627/umi.jpg" alt="" /> </a>
+						<figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop10"> <img src="assets/img20210627/reina.jpg" alt="" /> </a>
 							<figcaption>
 								<h6>雨宮れいな</h6>
 								Amamiya Reina</figcaption>
