--- a/index.html
+++ b/index.html
@@ -738,9 +738,9 @@ Preloader
 									<li>キャッチフレーズ：貴方だけの歌姫でありたい。泣き虫えんじぇる。白色担当 れいにーこと、雨宮れいなですっ</li>
 								</ul>
 								<ul class="channels_list row">
-									<li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Umi"><i class="fa fa-twitter"></i>TWITTER</a></li>
-								 	<!-- <li class="col-xs-12 col-sm-3"> <a href="https://instagram.com/goma_matsuyama?igshid=wsd6m180i2wc"><i class="fa fa-instagram"></i>INSTAGRAM</a></li>
-								 	<li class="col-xs-12 col-sm-3"> <a href="https://note.com/matsugoma"><i class="fa fa-note"></i>NOTE</a></li> -->
+									<li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Reina"><i class="fa fa-twitter"></i>TWITTER</a></li>
+								  <li class="col-xs-12 col-sm-3"> <a href="https://www.instagram.com/re_15o/"><i class="fa fa-instagram"></i>INSTAGRAM</a></li>
+								 	<!-- <li class="col-xs-12 col-sm-3"> <a href="https://note.com/matsugoma"><i class="fa fa-note"></i>NOTE</a></li> --> -->
 								</ul>
 							</div>
 						</div>
